cleaner API design. Finished user API implementation
