# api/user_api.py
@@ -1,4 +1,4 @@
-from fastapi import APIRouter, Depends, Query, Request
+from fastapi import APIRouter, Depends, Query, Request, Path
 
 from providers.services import get_auth_service, get_user_service
 from model import RegistrationRequest, UserAccount
@@ -109,6 +109,21 @@ async def get_followers(
     return await user_service.get_followers(user_id)
 
 
+@user_router.delete('/me/followers/{to_remove_id}')
+async def remove_follower(
+        to_remove_id: int = Path(..., ge=0),
+        user_service: UserService = Depends(get_user_service),
+        user_id: int = Depends(get_user)
+) -> None:
+    """
+    Removes a follower
+    :param to_remove_id: user ID of the follower to remove
+    :param user_service: user service
+    :param user_id: authenticated user ID
+    """
+    await user_service.remove_follower(user_id, to_remove_id)
+
+
 @user_router.get('/me/following')
 async def get_following(
         user_service: UserService = Depends(get_user_service),
@@ -123,6 +138,36 @@ async def get_following(
     return await user_service.get_following(user_id)
 
 
+@user_router.post('/me/following/{to_follow_id}')
+async def follow_user(
+        to_follow_id: int = Path(..., ge=0),
+        user_service: UserService = Depends(get_user_service),
+        user_id: int = Depends(get_user)
+) -> None:
+    """
+    Follows a user
+    :param to_follow_id: user ID of the user to follow
+    :param user_service: user service
+    :param user_id: authenticated user ID
+    """
+    await user_service.follow(user_id, to_follow_id)
+
+
+@user_router.delete('/me/following/{to_unfollow_id}')
+async def unfollow_user(
+        to_unfollow_id: int = Path(..., ge=0),
+        user_service: UserService = Depends(get_user_service),
+        user_id: int = Depends(get_user)
+) -> None:
+    """
+    Unfollows a user
+    :param to_unfollow_id: user ID of the user to unfollow
+    :param user_service: user service
+    :param user_id: authenticated user ID
+    """
+    await user_service.unfollow(user_id, to_unfollow_id)
+
+
 @user_router.get('/me/blocked')
 async def get_blocked(
         user_service: UserService = Depends(get_user_service),
@@ -135,3 +180,33 @@ async def get_blocked(
     :return: the current user blocked accounts
     """
     return await user_service.get_blocked(user_id)
+
+
+@user_router.post('/me/blocked/{to_block_id}')
+async def block_user(
+        to_block_id: int = Path(..., ge=0),
+        user_service: UserService = Depends(get_user_service),
+        user_id: int = Depends(get_user)
+) -> None:
+    """
+    Blocks a user
+    :param to_block_id: user ID of the user to block
+    :param user_service: user service
+    :param user_id: authenticated user ID
+    """
+    await user_service.block_user(user_id, to_block_id)
+
+
+@user_router.delete('/me/blocked/{to_unblock_id}')
+async def unblock_user(
+        to_unblock_id: int = Path(..., ge=0),
+        user_service: UserService = Depends(get_user_service),
+        user_id: int = Depends(get_user)
+) -> None:
+    """
+    Unblocks a user
+    :param to_unblock_id: user ID of the user to block
+    :param user_service: user service
+    :param user_id: authenticated user ID
+    """
+    await user_service.block_user(user_id, to_unblock_id)
